--- a/index.html
+++ b/index.html
@@ -231,6 +231,27 @@
             <label for="m">m</label> 
            </td> <br>
            <td>
+            <td>
+            <label for="x">rx: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="x" value="0" size="3" id="rxd">
+            <label for="m">m,  </label> 
+           </td>
+           <td>
+            <label for="y">ry: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="y" value="0" size="3" id="ryd">
+            <label for="m">m,  </label> 
+           </td>
+           <td>
+            <label for="z">rz: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="z" value="0" size="3" id="rzd">
+            <label for="m">m</label> 
+           </td> <br>
            <td>
             <label for="carga">Carga: </label>    
            </td>
@@ -280,6 +301,27 @@
             <label for="m">m</label> 
            </td> <br>
            <td>
+            <td>
+            <label for="x">rx: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="x" value="0" size="3" id="rxdl">
+            <label for="m">m,  </label> 
+           </td>
+           <td>
+            <label for="y">ry: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="y" value="0" size="3" id="rydl">
+            <label for="m">m,  </label> 
+           </td>
+           <td>
+            <label for="z">rz: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="z" value="0" size="3" id="rzdl">
+            <label for="m">m</label> 
+           </td> <br>
            <td>
             <label for="carga">Carga: </label>    
            </td>
@@ -329,6 +371,27 @@
             <label for="m">m</label> 
            </td> <br>
            <td>
+            <td>
+            <label for="x">rx: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="x" value="0" size="3" id="rxdi">
+            <label for="m">m,  </label> 
+           </td>
+           <td>
+            <label for="y">ry: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="y" value="0" size="3" id="rydi">
+            <label for="m">m,  </label> 
+           </td>
+           <td>
+            <label for="z">rz: </label>    
+           </td>
+           <td align="left">
+            <input type="text" name="z" value="0" size="3" id="rzdi">
+            <label for="m">m</label> 
+           </td> <br>         
            <td>
             <label for="carga">Carga: </label>    
            </td>
@@ -434,10 +497,12 @@
 		  <label class="mr-sm-2" for="inlineFormCustomSelect">Precisão exibida de </label>
 		  <select class="custom-select mb-2 mr-sm-2 mb-sm-0" id="precisionSelected">
 		    <option value="1">1</option>
-		    <option value="2" selected>2</option>
-   		    <option value="3">3</option>
+		    <option value="2">2</option>
+   		    <option value="3" selected>3</option>
 		    <option value="4">4</option>
-   		    <option value="5">5</option>
+   		    <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
 		  </select> 
 		  <label class="mr-sm-2" for="inlineFormCustomSelect"> casas decimais </label> <br> <br>
            <td>
