--- a/index.html
+++ b/index.html
@@ -1,52 +1,2 @@
-<!doctype html><html lang="pt"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"><title>Titulo</title><meta name="description" content="Description"><meta name="author" content="author"><link rel="stylesheet" type="text/css" href="vendor/normalize.css"><link rel="stylesheet" type="text/css" href="assets/css/loader.css"></head><body id="body" onload="bodyLoaded()"><main id="main" enable="false">undefined</main><div class="page_block" state="hide"></div><header id="header"><div id="present"><h3>Nome App</h3><span>short description *max 3 lines</span></div><div class="dank-ass-loader"><div class="row"><div class="arrow up outer outer-18"></div><div class="arrow down outer outer-17"></div><div class="arrow up outer outer-16"></div><div class="arrow down outer outer-15"></div><div class="arrow up outer outer-14"></div></div><div class="row"><div class="arrow up outer outer-1"></div><div class="arrow down outer outer-2"></div><div class="arrow up inner inner-6"></div><div class="arrow down inner inner-5"></div><div class="arrow up inner inner-4"></div><div class="arrow down outer outer-13"></div><div class="arrow up outer outer-12"></div></div><div class="row"><div class="arrow down outer outer-3"></div><div class="arrow up outer outer-4"></div><div class="arrow down inner inner-1"></div><div class="arrow up inner inner-2"></div><div class="arrow down inner inner-3"></div><div class="arrow up outer outer-11"></div><div class="arrow down outer outer-10"></div></div><div class="row"><div class="arrow down outer outer-5"></div><div class="arrow up outer outer-6"></div><div class="arrow down outer outer-7"></div><div class="arrow up outer outer-8"></div><div class="arrow down outer outer-9"></div></div></div><script src="./deviceStartUp.js?0.00.004"></script>
-</header>
-    <div id="popupCena" class="popupCena" state="hide">
-
-        <p>posicao</p>
-        <div class="cena_iten" data="rx">
-            <span>x</span>
-            <input type="number" name="x" size="3" id="ptx">
-            <small>m</small>
-        </div>
-        <div class="cena_iten" data="rx">
-            <span>y</span>
-            <input type="number" name="x" size="3" id="ptx">
-            <small>m</small>
-        </div>
-        <div class="cena_iten" data="rx">
-            <span>z</span>
-            <input type="number" name="x" size="3" id="ptx">
-            <small>m</small>
-        </div>           
-        <p>rotacao</p>
-        <div class="cena_iten" data="rx">
-            <span>x</span>
-            <input type="number" name="x" size="3" id="ptx">
-            <small>m</small>
-        </div>
-        <div class="cena_iten" data="rx">
-            <span>y</span>
-            <input type="number" name="x" size="3" id="ptx">
-            <small>m</small>
-        </div>
-        <div class="cena_iten" data="rx">
-            <span>z</span>
-            <input type="number" name="x" size="3" id="ptx">
-            <small>m</small>
-        </div>           
-        <p>carga</p>
-        <div class="cena_iten" data="rx">
-            <span>raio</span>
-            <input type="number" name="x" size="3" id="ptx">
-            <small>m</small>
-        </div>
-
-         <div class="popupcena_button" onclick="console.log('call')">alterar</div>
-
-        <div id="botton_menu" state="hide">
-
-        </div>
-
-
-    </div>
-    </body></html>
+<!doctype html><html lang="pt"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"><title>schanpsidee</title><meta name="description" content="Description"><meta name="Douglas Lohmann" content="Douglas Lohmann"><link rel="stylesheet" type="text/css" href="vendor/normalize.css"><link rel="stylesheet" type="text/css" href="assets/css/loader.css"></head><body id="body" onload="bodyLoaded()"><main id="main" enable="false">undefined</main><div class="page_block" state="hide"></div><header id="header"><div id="present"><h3>schanpsidee</h3><span>short description *max 3 lines</span></div><div class="dank-ass-loader"><div class="row"><div class="arrow up outer outer-18"></div><div class="arrow down outer outer-17"></div><div class="arrow up outer outer-16"></div><div class="arrow down outer outer-15"></div><div class="arrow up outer outer-14"></div></div><div class="row"><div class="arrow up outer outer-1"></div><div class="arrow down outer outer-2"></div><div class="arrow up inner inner-6"></div><div class="arrow down inner inner-5"></div><div class="arrow up inner inner-4"></div><div class="arrow down outer outer-13"></div><div class="arrow up outer outer-12"></div></div><div class="row"><div class="arrow down outer outer-3"></div><div class="arrow up outer outer-4"></div><div class="arrow down inner inner-1"></div><div class="arrow up inner inner-2"></div><div class="arrow down inner inner-3"></div><div class="arrow up outer outer-11"></div><div class="arrow down outer outer-10"></div></div><div class="row"><div class="arrow down outer outer-5"></div><div class="arrow up outer outer-6"></div><div class="arrow down outer outer-7"></div><div class="arrow up outer outer-8"></div><div class="arrow down outer outer-9"></div></div></div><script src="./deviceStartUp.js?0.00.004"></script>
+</header><div id="menu_show_demo"></div></body></html>
